--- a/cloudbuild/auth-service/dev.yaml
+++ b/cloudbuild/auth-service/dev.yaml
@@ -1,5 +1,5 @@
 steps:
-  # Obtener configuración de Firebase desde Secret Manager
+  # Paso 1: Obtener configuración de Firebase
   - name: 'gcr.io/cloud-builders/gcloud'
     entrypoint: 'bash'
     args:
@@ -8,49 +8,52 @@ steps:
         echo "$$FIREBASE_CONFIG" > .env
     secretEnv: ['FIREBASE_CONFIG']
 
-  # Build de la imagen Docker
-- name: 'gcr.io/cloud-builders/docker'
-  args: [
-    'build',
-    '-f', 'src/web/auth/Dockerfile',  # Ruta específica del Dockerfile
-    '-t', '$_ARTIFACT_REGISTRY_DOMAIN/$PROJECT_ID/blensy-artifacts-dev/auth-service/auth-service:$SHORT_SHA',
-    '-t', '$_ARTIFACT_REGISTRY_DOMAIN/$PROJECT_ID/blensy-artifacts-dev/auth-service/auth-service:latest',
-    'src/web/auth'  # Contexto de build (directorio raíz para la construcción)
-  ]
+  # Paso 2: Construir la imagen Docker
+  - name: 'gcr.io/cloud-builders/docker'
+    args: [
+      'build',
+      '-f', 'src/web/auth/Dockerfile',
+      '-t', '${_ARTIFACT_REGISTRY_DOMAIN}/${PROJECT_ID}/blensy-artifacts-dev/auth-service/auth-service:${SHORT_SHA}',
+      '-t', '${_ARTIFACT_REGISTRY_DOMAIN}/${PROJECT_ID}/blensy-artifacts-dev/auth-service/auth-service:latest',
+      'src/web/auth'
+    ]
 
-  # Push de la imagen al Artifact Registry
+  # Paso 3: Subir la imagen a Artifact Registry
   - name: 'gcr.io/cloud-builders/docker'
     args: [
       'push',
-      '$_ARTIFACT_REGISTRY_DOMAIN/$PROJECT_ID/blensy-artifacts-dev/auth-service/auth-service:$SHORT_SHA'
+      '${_ARTIFACT_REGISTRY_DOMAIN}/${PROJECT_ID}/blensy-artifacts-dev/auth-service/auth-service:${SHORT_SHA}'
     ]
 
-  # Despliegue en Cloud Run
+  # Paso 4: Desplegar en Cloud Run
   - name: 'gcr.io/cloud-builders/gcloud'
     args: [
       'run',
       'deploy',
       'auth-service-dev',
-      '--image', '$_ARTIFACT_REGISTRY_DOMAIN/$PROJECT_ID/blensy-artifacts-dev/auth-service/auth-service:$SHORT_SHA',
-      '--region', '$_CLOUD_RUN_REGION',
+      '--image', '${_ARTIFACT_REGISTRY_DOMAIN}/${PROJECT_ID}/blensy-artifacts-dev/auth-service/auth-service:${SHORT_SHA}',
+      '--region', '${_CLOUD_RUN_REGION}',
       '--platform', 'managed',
       '--allow-unauthenticated',
-      '--service-account', 'blensy-services-dev@$PROJECT_ID.iam.gserviceaccount.com',
+      '--service-account', 'blensy-services-dev@${PROJECT_ID}.iam.gserviceaccount.com',
       '--set-env-vars', 'ENVIRONMENT=development'
     ]
 
+# Configuración de secretos
 availableSecrets:
   secretManager:
-    - versionName: projects/$PROJECT_ID/secrets/firebase-config/versions/latest
+    - versionName: projects/${PROJECT_ID}/secrets/firebase-config/versions/latest
       env: 'FIREBASE_CONFIG'
 
+# Opciones de configuración
 options:
   logging: CLOUD_LOGGING_ONLY
   dynamic_substitutions: true
 
+# Tags para identificar el build
 tags: ['dev', 'auth-service']
 
-# Valores por defecto para las variables personalizadas
+# Variables sustituibles
 substitutions:
   _CLOUD_RUN_REGION: 'europe-southwest1'
   _ARTIFACT_REGISTRY_DOMAIN: 'europe-southwest1-docker.pkg.dev'
