Some Dockerfile tests and adjustments

--- a/cloudbuild/auth-service/dev.yaml
+++ b/cloudbuild/auth-service/dev.yaml
@@ -5,7 +5,7 @@ steps:
     args:
       - '-c'
       - |
-        echo "$$FIREBASE_CONFIG" > .env
+        echo "$$FIREBASE_CONFIG" | tee .env > /dev/null
     secretEnv: ['FIREBASE_CONFIG']
 
   # Paso 2: Construir la imagen Docker
