--- a/cloudbuild/auth-service/dev.yaml
+++ b/cloudbuild/auth-service/dev.yaml
@@ -10,34 +10,39 @@ steps:
 
   # Paso 2: Construir la imagen Docker
   - name: 'gcr.io/cloud-builders/docker'
-  args: [
-    'build',
-    '-f', 'src/web/auth/Dockerfile',
-    '-t', '$_ARTIFACT_REGISTRY_DOMAIN/$PROJECT_ID/blensy-artifacts-dev/auth-service/auth-service:$SHORT_SHA',
-    '-t', '$_ARTIFACT_REGISTRY_DOMAIN/$PROJECT_ID/blensy-artifacts-dev/auth-service/auth-service:latest',
-    '.'  # Contexto de build en la raíz del repositorio
-  ]
+    args:
+      - 'build'
+      - '-f'
+      - 'src/web/auth/Dockerfile'
+      - '-t'
+      - '$_ARTIFACT_REGISTRY_DOMAIN/$PROJECT_ID/blensy-artifacts-dev/auth-service/auth-service:$SHORT_SHA'
+      - '-t'
+      - '$_ARTIFACT_REGISTRY_DOMAIN/$PROJECT_ID/blensy-artifacts-dev/auth-service/auth-service:latest'
+      - '.' # Contexto de build en la raíz del repositorio
 
   # Paso 3: Subir la imagen a Artifact Registry
   - name: 'gcr.io/cloud-builders/docker'
-    args: [
-      'push',
-      '${_ARTIFACT_REGISTRY_DOMAIN}/${PROJECT_ID}/blensy-artifacts-dev/auth-service/auth-service:${SHORT_SHA}'
-    ]
+    args:
+      - 'push'
+      - '${_ARTIFACT_REGISTRY_DOMAIN}/${PROJECT_ID}/blensy-artifacts-dev/auth-service/auth-service:${SHORT_SHA}'
 
   # Paso 4: Desplegar en Cloud Run
   - name: 'gcr.io/cloud-builders/gcloud'
-    args: [
-      'run',
-      'deploy',
-      'auth-service-dev',
-      '--image', '${_ARTIFACT_REGISTRY_DOMAIN}/${PROJECT_ID}/blensy-artifacts-dev/auth-service/auth-service:${SHORT_SHA}',
-      '--region', '${_CLOUD_RUN_REGION}',
-      '--platform', 'managed',
-      '--allow-unauthenticated',
-      '--service-account', 'blensy-services-dev@${PROJECT_ID}.iam.gserviceaccount.com',
-      '--set-env-vars', 'ENVIRONMENT=development'
-    ]
+    args:
+      - 'run'
+      - 'deploy'
+      - 'auth-service-dev'
+      - '--image'
+      - '${_ARTIFACT_REGISTRY_DOMAIN}/${PROJECT_ID}/blensy-artifacts-dev/auth-service/auth-service:${SHORT_SHA}'
+      - '--region'
+      - '${_CLOUD_RUN_REGION}'
+      - '--platform'
+      - 'managed'
+      - '--allow-unauthenticated'  # ¡CUIDADO!  Revisar esta opción para producción
+      - '--service-account'
+      - 'blensy-services-dev@${PROJECT_ID}.iam.gserviceaccount.com'
+      - '--set-env-vars'
+      - 'ENVIRONMENT=development'
 
 # Configuración de secretos
 availableSecrets:
