--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test": "tests"
   },
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "build": "npm ci --only=production" //  Añadido el script "build"
   },
   "repository": {
     "type": "git",
